--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Upload Video</title>
+</head>
 <body>
-    <h1>Upload Video and Audio</h1>
+    <h1>Upload Video</h1>
     <form method="post" enctype="multipart/form-data" action="/process">
         <p>Video File: <input type="file" name="video"></p>
-        <p>Audio File: <input type="file" name="audio"></p>
         <p><input type="submit" value="Process"></p>
     </form>
 </body>
