--- a/templates/download.html
+++ b/templates/download.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Download Merged Video</title>
+</head>
 <body>
     <h1>Your File is Ready!</h1>
-    <a href="/download/{{ filename }}">Download Merged Video</a>
+    <a href="{{ download_url }}" target="_blank">Download Merged Video from Dropbox</a>
 </body>
 </html>
